src/psy(before_conflict_resolution).output
State 203 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decList

    2 decList: decList declaration
    3        | declaration

    4 declaration: typeDecl
    5            | funDecl
    6            | varDecl
    7            | statement

    8 typeDecl: "type" IDENTIFIER "{" inTypeDeclList "}"

    9 funDecl: "fun" IDENTIFIER function

   10 function: "(" parameters ")" "->" var_type block
   11         | "(" ")" "->" var_type block

   12 parameters: parameters "," typedVar
   13           | typedVar

   14 typedVar: IDENTIFIER ":" var_type

   15 var_type: "int"
   16         | "float"
   17         | "string"
   18         | "bool"
   19         | "dyn"
   20         | "list" "[" INT_CONSTANT "]"
   21         | "null"
   22         | IDENTIFIER

   23 inTypeDeclList: inTypeDeclList inTypeDecl
   24               | inTypeDecl

   25 inTypeDecl: varDecl
   26           | typeDecl
   27           | funDecl

   28 varDecl: "var" var_type IDENTIFIER "=" expression ";"
   29        | "var" var_type IDENTIFIER ";"

   30 statement: exprStmt
   31          | forStmt
   32          | ifStmt
   33          | echoStmt
   34          | returnStmt
   35          | whileStmt
   36          | dowhileStmt
   37          | breakStmt
   38          | continueStmt
   39          | block

   40 exprStmt: expression ";"

   41 forStmt: "for" "(" forInit optExpr ";" optExpr ")" statement

   42 forInit: varDecl
   43        | exprStmt
   44        | ";"

   45 optExpr: expression
   46        | ε

   47 ifStmt: "if" "(" expression ")" statement "else" statement
   48       | "if" "(" expression ")" statement

   49 echoStmt: "echo" expression ";"

   50 returnStmt: "ret" expression ";"
   51           | "ret" ";"

   52 whileStmt: "while" "(" expression ")" statement

   53 dowhileStmt: "do" statement "while" "(" expression ")" ";"

   54 breakStmt: "break" ";"

   55 continueStmt: "continue" ";"

   56 block: "{" decList "}"
   57      | "{" "}"

   58 expression: assignment

   59 assignment: call_access "=" assignment
   60           | call_access "+=" assignment
   61           | call_access "-=" assignment
   62           | call_access "*=" assignment
   63           | call_access "/=" assignment
   64           | call_access "%=" assignment
   65           | ternary

   66 ternary: logic_or "?" assignment ":" assignment
   67        | logic_or

   68 logic_or: logic_or "||" logic_and
   69         | logic_and

   70 logic_and: logic_and "&&" bitwise_or
   71          | bitwise_or

   72 bitwise_or: bitwise_or "|" bitwise_xor
   73           | bitwise_xor

   74 bitwise_xor: bitwise_xor "^" bitwise_and
   75            | bitwise_and

   76 bitwise_and: bitwise_and "&" equality
   77            | equality

   78 equality: equality "!=" comparison
   79         | equality "==" comparison
   80         | comparison

   81 comparison: comparison ">" shift
   82           | comparison "<" shift
   83           | comparison ">=" shift
   84           | comparison "<=" shift
   85           | shift

   86 shift: shift "<<" term
   87      | shift ">>" term
   88      | term

   89 term: term "+" factor
   90     | term "-" factor
   91     | factor

   92 factor: factor "/" unary
   93       | factor "*" unary
   94       | factor "%" unary
   95       | unary

   96 unary: "!" unary
   97      | "~" unary
   98      | "-" unary
   99      | "++" unary
  100      | "--" unary
  101      | call_access

  102 call_access: call_access "(" arguments ")"
  103            | call_access "(" ")"
  104            | call_access "." IDENTIFIER
  105            | call_access "[" expression "]"
  106            | call_access "++"
  107            | call_access "--"
  108            | primary

  109 primary: BOOL_CONSTANT
  110        | "null"
  111        | INT_CONSTANT
  112        | FLOAT_CONSTANT
  113        | STRING_CONSTANT
  114        | IDENTIFIER
  115        | anonFunc
  116        | "(" expression ")"
  117        | "[" elements "]"
  118        | "[" "]"

  119 anonFunc: "lambda" function

  120 arguments: arguments "," expression
  121          | expression

  122 elements: elements "," expression
  123         | expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT_CONSTANT <ival> (258) 20 111
    FLOAT_CONSTANT <fval> (259) 112
    IDENTIFIER <sval> (260) 8 9 14 22 28 29 104 114
    STRING_CONSTANT <sval> (261) 113
    BOOL_CONSTANT <bval> (262) 109
    "null" (263) 21 110
    "var" (264) 28 29
    "int" (265) 15
    "float" (266) 16
    "string" (267) 17
    "bool" (268) 18
    "list" (269) 20
    "dyn" (270) 19
    "+" (271) 89
    "-" (272) 90 98
    "*" (273) 93
    "/" (274) 92
    "%" (275) 94
    "<" (276) 82
    ">" (277) 81
    "<=" (278) 84
    ">=" (279) 83
    "!=" (280) 78
    "==" (281) 79
    "&" (282) 76
    "&&" (283) 70
    "|" (284) 72
    "||" (285) 68
    "~" (286) 97
    "^" (287) 74
    "<<" (288) 86
    ">>" (289) 87
    "=" (290) 28 59
    "+=" (291) 60
    "-=" (292) 61
    "*=" (293) 62
    "/=" (294) 63
    "%=" (295) 64
    "++" (296) 99 106
    "--" (297) 100 107
    "?" (298) 66
    "!" (299) 96
    "echo" (300) 49
    "if" (301) 47 48
    "else" (302) 47
    "for" (303) 41
    "do" (304) 53
    "while" (305) 52 53
    "break" (306) 54
    "continue" (307) 55
    "type" (308) 8
    "fun" (309) 9
    "ret" (310) 50 51
    "->" (311) 10 11
    "lambda" (312) 119
    "(" (313) 10 11 41 47 48 52 53 102 103 116
    ")" (314) 10 11 41 47 48 52 53 102 103 116
    "{" (315) 8 56 57
    "}" (316) 8 56 57
    "[" (317) 20 105 117 118
    "]" (318) 20 105 117 118
    "." (319) 104
    ":" (320) 14 66
    ";" (321) 28 29 40 41 44 49 50 51 53 54 55
    "," (322) 12 120 122


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    program <node> (69)
        on left: 1
        on right: 0
    decList <node> (70)
        on left: 2 3
        on right: 1 2 56
    declaration <node> (71)
        on left: 4 5 6 7
        on right: 2 3
    typeDecl <node> (72)
        on left: 8
        on right: 4 26
    funDecl <node> (73)
        on left: 9
        on right: 5 27
    function <node> (74)
        on left: 10 11
        on right: 9 119
    parameters <node> (75)
        on left: 12 13
        on right: 10 12
    typedVar <node> (76)
        on left: 14
        on right: 12 13
    var_type <node> (77)
        on left: 15 16 17 18 19 20 21 22
        on right: 10 11 14 28 29
    inTypeDeclList <node> (78)
        on left: 23 24
        on right: 8 23
    inTypeDecl <node> (79)
        on left: 25 26 27
        on right: 23 24
    varDecl <node> (80)
        on left: 28 29
        on right: 6 25 42
    statement <node> (81)
        on left: 30 31 32 33 34 35 36 37 38 39
        on right: 7 41 47 48 52 53
    exprStmt <node> (82)
        on left: 40
        on right: 30 43
    forStmt <node> (83)
        on left: 41
        on right: 31
    forInit <node> (84)
        on left: 42 43 44
        on right: 41
    optExpr <node> (85)
        on left: 45 46
        on right: 41
    ifStmt <node> (86)
        on left: 47 48
        on right: 32
    echoStmt <node> (87)
        on left: 49
        on right: 33
    returnStmt <node> (88)
        on left: 50 51
        on right: 34
    whileStmt <node> (89)
        on left: 52
        on right: 35
    dowhileStmt <node> (90)
        on left: 53
        on right: 36
    breakStmt <node> (91)
        on left: 54
        on right: 37
    continueStmt <node> (92)
        on left: 55
        on right: 38
    block <node> (93)
        on left: 56 57
        on right: 10 11 39
    expression <node> (94)
        on left: 58
        on right: 28 40 45 47 48 49 50 52 53 105 116 120 121 122 123
    assignment <node> (95)
        on left: 59 60 61 62 63 64 65
        on right: 58 59 60 61 62 63 64 66
    ternary <node> (96)
        on left: 66 67
        on right: 65
    logic_or <node> (97)
        on left: 68 69
        on right: 66 67 68
    logic_and <node> (98)
        on left: 70 71
        on right: 68 69 70
    bitwise_or <node> (99)
        on left: 72 73
        on right: 70 71 72
    bitwise_xor <node> (100)
        on left: 74 75
        on right: 72 73 74
    bitwise_and <node> (101)
        on left: 76 77
        on right: 74 75 76
    equality <node> (102)
        on left: 78 79 80
        on right: 76 77 78 79
    comparison <node> (103)
        on left: 81 82 83 84 85
        on right: 78 79 80 81 82 83 84
    shift <node> (104)
        on left: 86 87 88
        on right: 81 82 83 84 85 86 87
    term <node> (105)
        on left: 89 90 91
        on right: 86 87 88 89 90
    factor <node> (106)
        on left: 92 93 94 95
        on right: 89 90 91 92 93 94
    unary <node> (107)
        on left: 96 97 98 99 100 101
        on right: 92 93 94 95 96 97 98 99 100
    call_access <node> (108)
        on left: 102 103 104 105 106 107 108
        on right: 59 60 61 62 63 64 101 102 103 104 105 106 107
    primary <node> (109)
        on left: 109 110 111 112 113 114 115 116 117 118
        on right: 108
    anonFunc <node> (110)
        on left: 119
        on right: 115
    arguments <node> (111)
        on left: 120 121
        on right: 102 120
    elements <node> (112)
        on left: 122 123
        on right: 117 122


State 0

    0 $accept: • program $end
    1 program: • decList
    2 decList: • decList declaration
    3        | • declaration
    4 declaration: • typeDecl
    5            | • funDecl
    6            | • varDecl
    7            | • statement
    8 typeDecl: • "type" IDENTIFIER "{" inTypeDeclList "}"
    9 funDecl: • "fun" IDENTIFIER function
   28 varDecl: • "var" var_type IDENTIFIER "=" expression ";"
   29        | • "var" var_type IDENTIFIER ";"
   30 statement: • exprStmt
   31          | • forStmt
   32          | • ifStmt
   33          | • echoStmt
   34          | • returnStmt
   35          | • whileStmt
   36          | • dowhileStmt
   37          | • breakStmt
   38          | • continueStmt
   39          | • block
   40 exprStmt: • expression ";"
   41 forStmt: • "for" "(" forInit optExpr ";" optExpr ")" statement
   47 ifStmt: • "if" "(" expression ")" statement "else" statement
   48       | • "if" "(" expression ")" statement
   49 echoStmt: • "echo" expression ";"
   50 returnStmt: • "ret" expression ";"
   51           | • "ret" ";"
   52 whileStmt: • "while" "(" expression ")" statement
   53 dowhileStmt: • "do" statement "while" "(" expression ")" ";"
   54 breakStmt: • "break" ";"
   55 continueStmt: • "continue" ";"
   56 block: • "{" decList "}"
   57      | • "{" "}"
   58 expression: • assignment
   59 assignment: • call_access "=" assignment
   60           | • call_access "+=" assignment
   61           | • call_access "-=" assignment
   62           | • call_access "*=" assignment
   63           | • call_access "/=" assignment
   64           | • call_access "%=" assignment
   65           | • ternary
   66 ternary: • logic_or "?" assignment ":" assignment
   67        | • logic_or
   68 logic_or: • logic_or "||" logic_and
   69         | • logic_and
   70 logic_and: • logic_and "&&" bitwise_or
   71          | • bitwise_or
   72 bitwise_or: • bitwise_or "|" bitwise_xor
   73           | • bitwise_xor
   74 bitwise_xor: • bitwise_xor "^" bitwise_and
   75            | • bitwise_and
   76 bitwise_and: • bitwise_and "&" equality
   77            | • equality
   78 equality: • equality "!=" comparison
   79         | • equality "==" comparison
   80         | • comparison
   81 comparison: • comparison ">" shift
   82           | • comparison "<" shift
   83           | • comparison ">=" shift
   84           | • comparison "<=" shift
   85           | • shift
   86 shift: • shift "<<" term
   87      | • shift ">>" term
   88      | • term
   89 term: • term "+" factor
   90     | • term "-" factor
   91     | • factor
   92 factor: • factor "/" unary
   93       | • factor "*" unary
   94       | • factor "%" unary
   95       | • unary
   96 unary: • "!" unary
   97      | • "~" unary
   98      | • "-" unary
   99      | • "++" unary
  100      | • "--" unary
  101      | • call_access
  102 call_access: • call_access "(" arguments ")"
  103            | • call_access "(" ")"
  104            | • call_access "." IDENTIFIER
  105            | • call_access "[" expression "]"
  106            | • call_access "++"
  107            | • call_access "--"
  108            | • primary
  109 primary: • BOOL_CONSTANT
  110        | • "null"
  111        | • INT_CONSTANT
  112        | • FLOAT_CONSTANT
  113        | • STRING_CONSTANT
  114        | • IDENTIFIER
  115        | • anonFunc
  116        | • "(" expression ")"
  117        | • "[" elements "]"
  118        | • "[" "]"
  119 anonFunc: • "lambda" function

    INT_CONSTANT     shift, and go to state 1
    FLOAT_CONSTANT   shift, and go to state 2
    IDENTIFIER       shift, and go to state 3
    STRING_CONSTANT  shift, and go to state 4
    BOOL_CONSTANT    shift, and go to state 5
    "null"           shift, and go to state 6
    "var"            shift, and go to state 7
    "-"              shift, and go to state 8
    "~"              shift, and go to state 9
    "++"             shift, and go to state 10
    "--"             shift, and go to state 11
    "!"              shift, and go to state 12
    "echo"           shift, and go to state 13
    "if"             shift, and go to state 14
    "for"            shift, and go to state 15
    "do"             shift, and go to state 16
    "while"          shift, and go to state 17
    "break"          shift, and go to state 18
    "continue"       shift, and go to state 19
    "type"           shift, and go to state 20
    "fun"            shift, and go to state 21
    "ret"            shift, and go to state 22
    "lambda"         shift, and go to state 23
    "("              shift, and go to state 24
    "{"              shift, and go to state 25
    "["              shift, and go to state 26

    program       go to state 27
    decList       go to state 28
    declaration   go to state 29
    typeDecl      go to state 30
    funDecl       go to state 31
    varDecl       go to state 32
    statement     go to state 33
    exprStmt      go to state 34
    forStmt       go to state 35
    ifStmt        go to state 36
    echoStmt      go to state 37
    returnStmt    go to state 38
    whileStmt     go to state 39
    dowhileStmt   go to state 40
    breakStmt     go to state 41
    continueStmt  go to state 42
    block         go to state 43
    expression    go to state 44
    assignment    go to state 45
    ternary       go to state 46
    logic_or      go to state 47
    logic_and     go to state 48
    bitwise_or    go to state 49
    bitwise_xor   go to state 50
    bitwise_and   go to state 51
    equality      go to state 52
    comparison    go to state 53
    shift         go to state 54
    term          go to state 55
    factor        go to state 56
    unary         go to state 57
    call_access   go to state 58
    primary       go to state 59
    anonFunc      go to state 60


State 1

  111 primary: INT_CONSTANT •

    $default  reduce using rule 111 (primary)


State 2

  112 primary: FLOAT_CONSTANT •

    $default  reduce using rule 112 (primary)


State 3

  114 primary: IDENTIFIER •

    $default  reduce using rule 114 (primary)


State 4

  113 primary: STRING_CONSTANT •

    $default  reduce using rule 113 (primary)


State 5

  109 primary: BOOL_CONSTANT •

    $default  reduce using rule 109 (primary)


State 6

  110 primary: "null" •

    $default  reduce using rule 110 (primary)


State 7

   15 var_type: • "int"
   16         | • "float"
   17         | • "string"
   18         | • "bool"
   19         | • "dyn"
   20         | • "list" "[" INT_CONSTANT "]"
   21         | • "null"
   22         | • IDENTIFIER
   28 varDecl: "var" • var_type IDENTIFIER "=" expression ";"
   29        | "var" • var_type IDENTIFIER ";"

    IDENTIFIER  shift, and go to state 61
    "null"      shift, and go to state 62
    "int"       shift, and go to state 63
    "float"     shift, and go to state 64
    "string"    shift, and go to state 65
    "bool"      shift, and go to state 66
    "list"      shift, and go to state 67
    "dyn"       shift, and go to state 68

    var_type  go to state 69


State 8

   96 unary: • "!" unary
   97      | • "~" unary
   98      | • "-" unary
   98      | "-" • unary
   99      | • "++" unary
  100      | • "--" unary
  101      | • call_access
  102 call_access: • call_access "(" arguments ")"
  103            | • call_access "(" ")"
  104            | • call_access "." IDENTIFIER
  105            | • call_access "[" expression "]"
  106            | • call_access "++"
  107            | • call_access "--"
  108            | • primary
  109 primary: • BOOL_CONSTANT
  110        | • "null"
  111        | • INT_CONSTANT
  112        | • FLOAT_CONSTANT
  113        | • STRING_CONSTANT
  114        | • IDENTIFIER
  115        | • anonFunc
  116        | • "(" expression ")"
  117        | • "[" elements "]"
  118        | • "[" "]"
  119 anonFunc: • "lambda" function

    INT_CONSTANT     shift, and go to state 1
    FLOAT_CONSTANT   shift, and go to state 2
    IDENTIFIER       shift, and go to state 3
    STRING_CONSTANT  shift, and go to state 4
    BOOL_CONSTANT    shift, and go to state 5
    "null"           shift, and go to state 6
    "-"              shift, and go to state 8
    "~"              shift, and go to state 9
    "++"             shift, and go to state 10
    "--"             shift, and go to state 11
    "!"              shift, and go to state 12
    "lambda"         shift, and go to state 23
    "("              shift, and go to state 24
    "["              shift, and go to state 26

    unary        go to state 70
    call_access  go to state 71
    primary      go to state 59
    anonFunc     go to state 60


State 9

   96 unary: • "!" unary
   97      | • "~" unary
   97      | "~" • unary
   98      | • "-" unary
   99      | • "++" unary
  100      | • "--" unary
  101      | • call_access
  102 call_access: • call_access "(" arguments ")"
  103            | • call_access "(" ")"
  104            | • call_access "." IDENTIFIER
  105            | • call_access "[" expression "]"
  106            | • call_access "++"
  107            | • call_access "--"
  108            | • primary
  109 primary: • BOOL_CONSTANT
  110        | • "null"
  111        | • INT_CONSTANT
  112        | • FLOAT_CONSTANT
  113        | • STRING_CONSTANT
  114        | • IDENTIFIER
  115        | • anonFunc
  116        | • "(" expression ")"
  117        | • "[" elements "]"
  118        | • "[" "]"
  119 anonFunc: • "lambda" function

    INT_CONSTANT     shift, and go to state 1
    FLOAT_CONSTANT   shift, and go to state 2
    IDENTIFIER       shift, and go to state 3
    STRING_CONSTANT  shift, and go to state 4
    BOOL_CONSTANT    shift, and go to state 5
    "null"           shift, and go to state 6
    "-"              shift, and go to state 8
    "~"              shift, and go to state 9
    "++"             shift, and go to state 10
    "--"             shift, and go to state 11
    "!"              shift, and go to state 12
    "lambda"         shift, and go to state 23
    "("              shift, and go to state 24
    "["              shift, and go to state 26

    unary        go to state 72
    call_access  go to state 71
    primary      go to state 59
    anonFunc     go to state 60


State 10

   96 unary: • "!" unary
   97      | • "~" unary
   98      | • "-" unary
   99      | • "++" unary
   99      | "++" • unary
  100      | • "--" unary
  101      | • call_access
  102 call_access: • call_access "(" arguments ")"
  103            | • call_access "(" ")"
  104            | • call_access "." IDENTIFIER
  105            | • call_access "[" expression "]"
  106            | • call_access "++"
  107            | • call_access "--"
  108            | • primary
  109 primary: • BOOL_CONSTANT
  110        | • "null"
  111        | • INT_CONSTANT
  112        | • FLOAT_CONSTANT
  113        | • STRING_CONSTANT
  114        | • IDENTIFIER
  115        | • anonFunc
  116        | • "(" expression ")"
  117        | • "[" elements "]"
  118        | • "[" "]"
  119 anonFunc: • "lambda" function

    INT_CONSTANT     shift, and go to state 1
    FLOAT_CONSTANT   shift, and go to state 2
    IDENTIFIER       shift, and go to state 3
    STRING_CONSTANT  shift, and go to state 4
    BOOL_CONSTANT    shift, and go to state 5
    "null"           shift, and go to state 6
    "-"              shift, and go to state 8
    "~"              shift, and go to state 9
    "++"             shift, and go to state 10
    "--"             shift, and go to state 11
    "!"              shift, and go to state 12
    "lambda"         shift, and go to state 23
    "("              shift, and go to state 24
    "["              shift, and go to state 26

    unary        go to state 73
    call_access  go to state 71
    primary      go to state 59
    anonFunc     go to state 60


State 11

   96 unary: • "!" unary
   97      | • "~" unary
   98      | • "-" unary
   99      | • "++" unary
  100      | • "--" unary
  100      | "--" • unary
  101      | • call_access
  102 call_access: • call_access "(" arguments ")"
  103            | • call_access "(" ")"
  104            | • call_access "." IDENTIFIER
  105            | • call_access "[" expression "]"
  106            | • call_access "++"
  107            | • call_access "--"
  108            | • primary
  109 primary: • BOOL_CONSTANT
  110        | • "null"
  111        | • INT_CONSTANT
  112        | • FLOAT_CONSTANT
  113        | • STRING_CONSTANT
  114        | • IDENTIFIER
  115        | • anonFunc
  116        | • "(" expression ")"
  117        | • "[" elements "]"
  118        | • "[" "]"
  119 anonFunc: • "lambda" function

    INT_CONSTANT     shift, and go to state 1
    FLOAT_CONSTANT   shift, and go to state 2
    IDENTIFIER       shift, and go to state 3
    STRING_CONSTANT  shift, and go to state 4
    BOOL_CONSTANT    shift, and go to state 5
    "null"           shift, and go to state 6
    "-"              shift, and go to state 8
    "~"              shift, and go to state 9
    "++"             shift, and go to state 10
    "--"             shift, and go to state 11
    "!"              shift, and go to state 12
    "lambda"         shift, and go to state 23
    "("              shift, and go to state 24
    "["              shift, and go to state 26

    unary        go to state 74
    call_access  go to state 71
    primary      go to state 59
    anonFunc     go to state 60


State 12

   96 unary: • "!" unary
   96      | "!" • unary
   97      | • "~" unary
   98      | • "-" unary
   99      | • "++" unary
  100      | • "--" unary
  101      | • call_access
  102 call_access: • call_access "(" arguments ")"
  103            | • call_access "(" ")"
  104            | • call_access "." IDENTIFIER
  105            | • call_access "[" expression "]"
  106            | • call_access "++"
  107            | • call_access "--"
  108            | • primary
  109 primary: • BOOL_CONSTANT
  110        | • "null"
  111        | • INT_CONSTANT
  112        | • FLOAT_CONSTANT
  113        | • STRING_CONSTANT
  114        | • IDENTIFIER
  115        | • anonFunc
  116        | • "(" expression ")"
  117        | • "[" elements "]"
  118        | • "[" "]"
  119 anonFunc: • "lambda" function

    INT_CONSTANT     shift, and go to state 1
    FLOAT_CONSTANT   shift, and go to state 2
    IDENTIFIER       shift, and go to state 3
    STRING_CONSTANT  shift, and go to state 4
    BOOL_CONSTANT    shift, and go to state 5
    "null"           shift, and go to state 6
    "-"              shift, and go to state 8
    "~"              shift, and go to state 9
    "++"             shift, and go to state 10
    "--"             shift, and go to state 11
    "!"              shift, and go to state 12
    "lambda"         shift, and go to state 23
    "("              shift, and go to state 24
    "["              shift, and go to state 26

    unary        go to state 75
    call_access  go to state 71
    primary      go to state 59
    anonFunc     go to state 60


State 13

   49 echoStmt: "echo" • expression ";"
   58 expression: • assignment
   59 assignment: • call_access "=" assignment
   60           | • call_access "+=" assignment
   61           | • call_access "-=" assignment
   62           | • call_access "*=" assignment
   63           | • call_access "/=" assignment
   64           | • call_access "%=" assignment
   65           | • ternary
   66 ternary: • logic_or "?" assignment ":" assignment
   67        | • logic_or
   68 logic_or: • logic_or "||" logic_and
   69         | • logic_and
   70 logic_and: • logic_and "&&" bitwise_or
   71          | • bitwise_or
   72 bitwise_or: • bitwise_or "|" bitwise_xor
   73           | • bitwise_xor
   74 bitwise_xor: • bitwise_xor "^" bitwise_and
   75            | • bitwise_and
   76 bitwise_and: • bitwise_and "&" equality
   77            | • equality
   78 equality: • equality "!=" comparison
   79         | • equality "==" comparison
   80         | • comparison
   81 comparison: • comparison ">" shift
   82           | • comparison "<" shift
   83           | • comparison ">=" shift
   84           | • comparison "<=" shift
   85           | • shift
   86 shift: • shift "<<" term
   87      | • shift ">>" term
   88      | • term
   89 term: • term "+" factor
   90     | • term "-" factor
   91     | • factor
   92 factor: • factor "/" unary
   93       | • factor "*" unary
   94       | • factor "%" unary
   95       | • unary
   96 unary: • "!" unary
   97      | • "~" unary
   98      | • "-" unary
   99      | • "++" unary
  100      | • "--" unary
  101      | • call_access
  102 call_access: • call_access "(" arguments ")"
  103            | • call_access "(" ")"
  104            | • call_access "." IDENTIFIER
  105            | • call_access "[" expression "]"
  106            | • call_access "++"
  107            | • call_access "--"
  108            | • primary
  109 primary: • BOOL_CONSTANT
  110        | • "null"
  111        | • INT_CONSTANT
  112        | • FLOAT_CONSTANT
  113        | • STRING_CONSTANT
  114        | • IDENTIFIER
  115        | • anonFunc
  116        | • "(" expression ")"
  117        | • "[" elements "]"
  118        | • "[" "]"
  119 anonFunc: • "lambda" function

    INT_CONSTANT     shift, and go to state 1
    FLOAT_CONSTANT   shift, and go to state 2
    IDENTIFIER       shift, and go to state 3
    STRING_CONSTANT  shift, and go to state 4
    BOOL_CONSTANT    shift, and go to state 5
    "null"           shift, and go to state 6
    "-"              shift, and go to state 8
    "~"              shift, and go to state 9
    "++"             shift, and go to state 10
    "--"             shift, and go to state 11
    "!"              shift, and go to state 12
    "lambda"         shift, and go to state 23
    "("              shift, and go to state 24
    "["              shift, and go to state 26

    expression   go to state 76
    assignment   go to state 45
    ternary      go to state 46
    logic_or     go to state 47
    logic_and    go to state 48
    bitwise_or   go to state 49
    bitwise_xor  go to state 50
    bitwise_and  go to state 51
    equality     go to state 52
    comparison   go to state 53
    shift        go to state 54
    term         go to state 55
    factor       go to state 56
    unary        go to state 57
    call_access  go to state 58
    primary      go to state 59
    anonFunc     go to state 60


State 14

   47 ifStmt: "if" • "(" expression ")" statement "else" statement
   48       | "if" • "(" expression ")" statement

    "("  shift, and go to state 77


State 15

   41 forStmt: "for" • "(" forInit optExpr ";" optExpr ")" statement

    "("  shift, and go to state 78


State 16

   30 statement: • exprStmt
   31          | • forStmt
   32          | • ifStmt
   33          | • echoStmt
   34          | • returnStmt
   35          | • whileStmt
   36          | • dowhileStmt
   37          | • breakStmt
   38          | • continueStmt
   39          | • block
   40 exprStmt: • expression ";"
   41 forStmt: • "for" "(" forInit optExpr ";" optExpr ")" statement
   47 ifStmt: • "if" "(" expression ")" statement "else" statement
   48       | • "if" "(" expression ")" statement
   49 echoStmt: • "echo" expression ";"
   50 returnStmt: • "ret" expression ";"
   51           | • "ret" ";"
   52 whileStmt: • "while" "(" expression ")" statement
   53 dowhileStmt: • "do" statement "while" "(" expression ")" ";"
   53            | "do" • statement "while" "(" expression ")" ";"
   54 breakStmt: • "break" ";"
   55 continueStmt: • "continue" ";"
   56 block: • "{" decList "}"
   57      | • "{" "}"
   58 expression: • assignment
   59 assignment: • call_access "=" assignment
   60           | • call_access "+=" assignment
   61           | • call_access "-=" assignment
   62           | • call_access "*=" assignment
   63           | • call_access "/=" assignment
   64           | • call_access "%=" assignment
   65           | • ternary
   66 ternary: • logic_or "?" assignment ":" assignment
   67        | • logic_or
   68 logic_or: • logic_or "||" logic_and
   69         | • logic_and
   70 logic_and: • logic_and "&&" bitwise_or
   71          | • bitwise_or
   72 bitwise_or: • bitwise_or "|" bitwise_xor
   73           | • bitwise_xor
   74 bitwise_xor: • bitwise_xor "^" bitwise_and
   75            | • bitwise_and
   76 bitwise_and: • bitwise_and "&" equality
   77            | • equality
   78 equality: • equality "!=" comparison
   79         | • equality "==" comparison
   80         | • comparison
   81 comparison: • comparison ">" shift
   82           | • comparison "<" shift
   83           | • comparison ">=" shift
   84           | • comparison "<=" shift
   85           | • shift
   86 shift: • shift "<<" term
   87      | • shift ">>" term
   88      | • term
   89 term: • term "+" factor
   90     | • term "-" factor
   91     | • factor
   92 factor: • factor "/" unary
   93       | • factor "*" unary
   94       | • factor "%" unary
   95       | • unary
   96 unary: • "!" unary
   97      | • "~" unary
   98      | • "-" unary
   99      | • "++" unary
  100      | • "--" unary
  101      | • call_access
  102 call_access: • call_access "(" arguments ")"
  103            | • call_access "(" ")"
  104            | • call_access "." IDENTIFIER
  105            | • call_access "[" expression "]"
  106            | • call_access "++"
  107            | • call_access "--"
  108            | • primary
  109 primary: • BOOL_CONSTANT
  110        | • "null"
  111        | • INT_CONSTANT
  112        | • FLOAT_CONSTANT
  113        | • STRING_CONSTANT
  114        | • IDENTIFIER
  115        | • anonFunc
  116        | • "(" expression ")"
  117        | • "[" elements "]"
  118        | • "[" "]"
  119 anonFunc: • "lambda" function

    INT_CONSTANT     shift, and go to state 1
    FLOAT_CONSTANT   shift, and go to state 2
    IDENTIFIER       shift, and go to state 3
    STRING_CONSTANT  shift, and go to state 4
    BOOL_CONSTANT    shift, and go to state 5
    "null"           shift, and go to state 6
    "-"              shift, and go to state 8
    "~"              shift, and go to state 9
    "++"             shift, and go to state 10
    "--"             shift, and go to state 11
    "!"              shift, and go to state 12
    "echo"           shift, and go to state 13
    "if"             shift, and go to state 14
    "for"            shift, and go to state 15
    "do"             shift, and go to state 16
    "while"          shift, and go to state 17
    "break"          shift, and go to state 18
    "continue"       shift, and go to state 19
    "ret"            shift, and go to state 22
    "lambda"         shift, and go to state 23
    "("              shift, and go to state 24
    "{"              shift, and go to state 25
    "["              shift, and go to state 26

    statement     go to state 79
    exprStmt      go to state 34
    forStmt       go to state 35
    ifStmt        go to state 36
    echoStmt      go to state 37
    returnStmt    go to state 38
    whileStmt     go to state 39
    dowhileStmt   go to state 40
    breakStmt     go to state 41
    continueStmt  go to state 42
    block         go to state 43
    expression    go to state 44
    assignment    go to state 45
    ternary       go to state 46
    logic_or      go to state 47
    logic_and     go to state 48
    bitwise_or    go to state 49
    bitwise_xor   go to state 50
    bitwise_and   go to state 51
    equality      go to state 52
    comparison    go to state 53
    shift         go to state 54
    term          go to state 55
    factor        go to state 56
    unary         go to state 57
    call_access   go to state 58
    primary       go to state 59
    anonFunc      go to state 60


State 17

   52 whileStmt: "while" • "(" expression ")" statement

    "("  shift, and go to state 80


State 18

   54 breakStmt: "break" • ";"

    ";"  shift, and go to state 81


State 19

   55 continueStmt: "continue" • ";"

    ";"  shift, and go to state 82


State 20

    8 typeDecl: "type" • IDENTIFIER "{" inTypeDeclList "}"

    IDENTIFIER  shift, and go to state 83


State 21

    9 funDecl: "fun" • IDENTIFIER function

    IDENTIFIER  shift, and go to state 84


State 22

   50 returnStmt: "ret" • expression ";"
   51           | "ret" • ";"
   58 expression: • assignment
   59 assignment: • call_access "=" assignment
   60           | • call_access "+=" assignment
   61           | • call_access "-=" assignment
   62           | • call_access "*=" assignment
   63           | • call_access "/=" assignment
   64           | • call_access "%=" assignment
   65           | • ternary
   66 ternary: • logic_or "?" assignment ":" assignment
   67        | • logic_or
   68 logic_or: • logic_or "||" logic_and
   69         | • logic_and
   70 logic_and: • logic_and "&&" bitwise_or
   71          | • bitwise_or
   72 bitwise_or: • bitwise_or "|" bitwise_xor
   73           | • bitwise_xor
   74 bitwise_xor: • bitwise_xor "^" bitwise_and
   75            | • bitwise_and
   76 bitwise_and: • bitwise_and "&" equality
   77            | • equality
   78 equality: • equality "!=" comparison
   79         | • equality "==" comparison
   80         | • comparison
   81 comparison: • comparison ">" shift
   82           | • comparison "<" shift
   83           | • comparison ">=" shift
   84           | • comparison "<=" shift
   85           | • shift
   86 shift: • shift "<<" term
   87      | • shift ">>" term
   88      | • term
   89 term: • term "+" factor
   90     | • term "-" factor
   91     | • factor
   92 factor: • factor "/" unary
   93       | • factor "*" unary
   94       | • factor "%" unary
   95       | • unary
   96 unary: • "!" unary
   97      | • "~" unary
   98      | • "-" unary
   99      | • "++" unary
  100      | • "--" unary
  101      | • call_access
  102 call_access: • call_access "(" arguments ")"
  103            | • call_access "(" ")"
  104            | • call_access "." IDENTIFIER
  105            | • call_access "[" expression "]"
  106            | • call_access "++"
  107            | • call_access "--"
  108            | • primary
  109 primary: • BOOL_CONSTANT
  110        | • "null"
  111        | • INT_CONSTANT
  112        | • FLOAT_CONSTANT
  113        | • STRING_CONSTANT
  114        | • IDENTIFIER
  115        | • anonFunc
  116        | • "(" expression ")"
  117        | • "[" elements "]"
  118        | • "[" "]"
  119 anonFunc: • "lambda" function
